fix(sonar): clear all new violations, gate passes green
- S6885: Math.clamp in LogUtils (Java 21)
- S6213: rename restricted-identifier vars (record→payload/msg/r) in tests
- S2925: Thread.sleep → LockSupport.parkNanos in GenerationEngineTest
- S1874: Thread.getId → threadId(); KafkaContainer → ConfluentKafkaContainer
- S6880: if/else chain → switch expression in JdbcTypeMapper
- S6242: explicit DefaultCredentialsProvider on AwsSecretsManagerResolver
- S3064: suppress false-positive on DCL volatile sentinel in SchemaRegistryAvroSerializer
- S5853: join assertion chains in ProtobufSerializerTest, FakerCacheTest, DatafakerNewTypesTest
- S2147: merge identical catch blocks in AzureKeyVaultResolver

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>